[chromium] Fix race condition where animations start, finish and are deleted on the composite thread, all before the start even arrives on the main thread. https://bugs.webkit.org/show_bug.cgi?id=88439

Patch by Eric Penner <epenner@google.com> on 2012-06-14
Reviewed by James Robinson.

Scheduling behavior covered by existing tests.

* platform/graphics/chromium/cc/CCActiveAnimation.cpp:
(WebCore::CCActiveAnimation::isFinishedAt):
* platform/graphics/chromium/cc/CCActiveAnimation.h:
(WebCore::CCActiveAnimation::isFinished):
* platform/graphics/chromium/cc/CCLayerAnimationController.cpp:
(WebCore::CCLayerAnimationController::suspendAnimations):
(WebCore::CCLayerAnimationController::pushAnimationUpdatesTo):
(WebCore::CCLayerAnimationController::animate):
(WebCore::CCLayerAnimationController::hasActiveAnimation):
(WebCore):
(WebCore::CCLayerAnimationController::markAnimationsForDeletion):
(WebCore::CCLayerAnimationController::purgeAnimationsMarkedForDeletion):
* platform/graphics/chromium/cc/CCLayerAnimationController.h:
(CCLayerAnimationController):

Canonical link: https://commits.webkit.org/106943@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120326 268f45cc-cd09-0410-ab3c-d52691b4dbfc